--- a/index.css
+++ b/index.css
@@ -4,12 +4,13 @@ body
     text-align: center;
     justify-content: center;
     font-family: 'Courier New', Courier, monospace;
+    background: linear-gradient(90deg, #513252, #CA4E79);
 }
 
 #canvas
 {
     position: relative;
-    margin-top: 125px;
+    margin-top: 24px;
     border: 1px solid black;
 }
 
